Import of PIRZYK/NetAthlon2-RAW-0.13 from CPAN.
gitpan-cpan-distribution: NetAthlon2-RAW
gitpan-cpan-version:      0.13
gitpan-cpan-path:         PIRZYK/NetAthlon2-RAW-0.13.tar.gz
gitpan-cpan-author:       PIRZYK
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -1,6 +1,6 @@
 ---
 name: NetAthlon2-RAW
-version: 0.12
+version: 0.13
 author:
   - 'Jim Pirzyk, E<lt>jim+perl@pirzyk.orgE<gt>'
 abstract: Perl extension to parse NetAthlon2 RAW performance data files
@@ -8,6 +8,8 @@ license: perl
 requires:
   Carp: 0
   perl: 5.005_03
+build_requires:
+  Archive::Tar: 0
 generated_by: Module::Build version 0.2808
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.2.html
@@ -15,6 +17,6 @@ meta-spec:
 provides:
   NetAthlon2::RAW:
     file: lib/NetAthlon2/RAW.pm
-    version: 0.12
+    version: 0.13
 resources:
   license: http://dev.perl.org/licenses/
