--- a/META.yml
+++ b/META.yml
@@ -1,9 +1,9 @@
 ---
 name: NetAthlon2-RAW
-version: 0.30
+version: 0.31
 author:
   - 'Jim Pirzyk, E<lt>jim+perl@pirzyk.orgE<gt>'
-abstract: Perl extension to parse NetAthlon2 RAW performance data files
+abstract: Perl extension to parse NetAthlon2 RAW performance data files.
 license: perl
 requires:
   Carp: 0
@@ -20,6 +20,6 @@ meta-spec:
 provides:
   NetAthlon2::RAW:
     file: lib/NetAthlon2/RAW.pm
-    version: 0.30
+    version: 0.31
 resources:
   license: http://dev.perl.org/licenses/
